[package]
name = "detection-color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
image = { version = "0.24.5", features = ["rgb"] }
indicatif = { version = "0.17.2", features = ["rayon"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
walkdir = "2.3.2"
